fixed z-index issue with game-over-overlay on small screen

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -548,7 +548,6 @@ a {
 
 	.game-over-overlay {
 		position: fixed;
-		z-index: 20;
 	}
 
 	.game-level-up-overlay span {
